[package]
name = "kelili"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
blake2 = "0.10.6"
curve25519-dalek = { version = "4.1.1", features = ["group"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
hex = "0.4.3"
bincode = "1.3.3"
mlua = { version = "0.9.2", features = ["luajit52", "macros"] }
crossbeam = "0.8.2"
serde = { version = "1.0.193", features = ["derive"] }
async-recursion = "1.0.5"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
typenum = "1.17.0"
group = "0.13.0"
bstr = "1.8.0"
ethnum = "1.5.0"
